--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@stripe/react-stripe-js": "^3.5.1",
     "@stripe/stripe-js": "^6.1.0",
     "@uiw/react-codemirror": "^4.23.10",
-    "antd": "^5.24.4",
+    "antd": "^5.13.0",
+    "core-js": "^3.41.0",
     "dayjs": "^1.11.13",
     "dompurify": "^3.2.4",
     "firebase": "^11.4.0",
@@ -25,7 +26,7 @@
     "lucide-react": "^0.483.0",
     "mongoose": "^8.12.0",
     "mustache": "^4.2.0",
-    "next": "15.2.0",
+    "next": "^15.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
